day-26/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-backend-pod
  labels:
    # This label is used by the NetworkPolicy to protect the backend Pod
    app: backend
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
