day-26/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-frontend-pod
  labels:
    # This label is used by the NetworkPolicy to identify the frontend Pod
    app: frontend
spec:
  containers:
    - name: busybox-container
      image: busybox
      command: ["sh", "-c", "sleep 3600"]
